# ComfyUI-StableManifoldCompander

./: .gitignore  README.md  affine_core.py  core.py  impact_hook.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
