[project]
name = "comfyui-stable-manifold-compander"
version = "0.2.1"
description = "ComfyUI custom nodes for correcting FLUX.2 high-resolution drift, washout, and crop reintegration artifacts with anchor-guided and affine companding workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/xmarre/ComfyUI-StableManifoldCompander"
Documentation = "https://github.com/xmarre/ComfyUI-StableManifoldCompander#readme"
"Bug Tracker" = "https://github.com/xmarre/ComfyUI-StableManifoldCompander/issues"

[tool.comfy]
PublisherId = "xmarre"
DisplayName = "ComfyUI-StableManifoldCompander"
Icon = ""
includes = []

[tool.ruff]
line-length = 120
